# Solector_V2

./: package-lock.json  package.json
backend/: pyproject.toml
backend/src/: db.py  functions.py  main.py
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.vue  element-variables.scss  main.js  router.js
frontend/src/components/: footer.vue  marketplace_filters.vue  nav.vue  product_list.vue
frontend/src/components/filter/: brand.vue  marketplace_filters.vue  range_slider.vue
frontend/src/components/selection/: devices.vue  energy.vue  free_selection.vue  map.vue  normal_selection.vue
frontend/src/routes/: feedback_form.vue  main_page.vue  marketplace.vue  product.vue  selection.vue
