[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend of Solector.ru"
authors = ["StanisLove <sta-tun-slav@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
SQLAlchemy = "^1.4.23"
python-dotenv = "^0.19.0"
psycopg2 = "^2.9.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
