[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Backend of Solector.ru"
authors = ["StanisLove <sta-tun-slav@yandex.ru>"]
packages = [
    { include = "./src" },
]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
SQLAlchemy = "^1.4.23"
python-dotenv = "^0.19.0"
psycopg2 = "^2.9.1"
Flask-Cors = "^3.0.10"
typer = "^0.4.0"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
run_server = "src.main:runner"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
